[package]
name = "patricia-trie"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10.8"
serde = { version = "1", default-features = false, features = ["derive"] }
bincode = "1.3.3"
rusqlite = { version = "0.32", optional = true }

[dev-dependencies]
rand = "0.8.5"
indicatif = "0.17.8"
colored = "2.1.0"

[features]
sqlite = ["rusqlite"]
stress-test = []
